--- a/.github/workflows/styleguide-with-test.yml
+++ b/.github/workflows/styleguide-with-test.yml
@@ -4,8 +4,8 @@ name: Angular Styleguide CI with Node.js
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  #pull_request:
+  #  branches: [ "main" ]
 
 jobs:
   build:
