--- a/.github/workflows/styleguide-with-test.yml
+++ b/.github/workflows/styleguide-with-test.yml
@@ -55,6 +55,10 @@ jobs:
       #  run: |
       #    npm test
 
+      # start server for testing
+      - name: Start
+        run: |
+          npm start
       # wdio test
       - name: Wdio Test
         run: |
