--- a/.github/workflows/webdriverio-ci.yml
+++ b/.github/workflows/webdriverio-ci.yml
@@ -12,16 +12,11 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 18
       - name: Install
         run: npm ci
       - name: Test
         run: npm run e2e:wdio
-      - uses: actions/upload-artifact@v1
-        if: failure()
-        with:
-          name: logs
-          path: logs
