--- a/.github/workflows/webdriverio-ci.yml
+++ b/.github/workflows/webdriverio-ci.yml
@@ -2,9 +2,9 @@ name: webdriverio-ci
 
 on:
   push:
-    branches: [main]
+    branches: [main, ci-tests]
   pull_request:
-    branches: [main]
+    branches: [main, ci-tests]
 
 jobs:
   test:
