--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,8 +1,11 @@
 name: E2E Testing
 
 on:
-  push:
-  pull_request:
+  workflow_run:
+    # run E2E Tests after recent build has been deployed to GitHub pages
+    workflows: ['pages-build-deployment']
+    types:
+      - completed
 
 jobs:
   test:
