--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,10 +1,6 @@
 name: E2E Testing
 
-on:
-  workflow_run:
-    # run E2E Tests after recent build has been deployed to GitHub pages
-    workflows: ['pages-build-deployment']
-    types: [completed]
+on: deployment
 
 jobs:
   test:
