--- a/angular.json
+++ b/angular.json
@@ -109,9 +109,8 @@
       }
     }
   },
-  "defaultProject": "angular-redux-shop",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": ["@angular-eslint/schematics"]
   },
   "schematics": {
     "@angular-eslint/schematics:application": {
