--- a/package.json
+++ b/package.json
@@ -46,27 +46,27 @@
     "zone.js": "0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.4",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "15.1.5",
+    "@angular-devkit/build-angular": "16.2.4",
+    "@angular-eslint/builder": "16.2.0",
+    "@angular-eslint/eslint-plugin": "16.2.0",
+    "@angular-eslint/eslint-plugin-template": "16.2.0",
+    "@angular-eslint/schematics": "16.2.0",
+    "@angular-eslint/template-parser": "16.2.0",
+    "@angular/cli": "16.2.4",
     "@angular/compiler-cli": "16.2.7",
     "@angular/language-service": "16.2.7",
     "@ngrx/schematics": "15.3.0",
     "@playwright/test": "1.31.1",
     "@types/jasmine": "4.3.1",
     "@types/node": "18.13.0",
-    "@typescript-eslint/eslint-plugin": "5.56.0",
-    "@typescript-eslint/parser": "5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "@wdio/cli": "8.3.8",
     "@wdio/jasmine-framework": "8.3.8",
     "@wdio/local-runner": "8.3.8",
     "@wdio/spec-reporter": "8.3.0",
     "chromedriver": "117.0.0",
-    "eslint": "8.36.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-jasmine": "4.1.3",
     "galenframework-cli": "2.4.4-build43",
