--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@angular/platform-browser": "16.2.7",
     "@angular/platform-browser-dynamic": "16.2.7",
     "@angular/router": "16.2.7",
-    "@fortawesome/angular-fontawesome": "0.12.1",
-    "@fortawesome/fontawesome-svg-core": "6.3.0",
-    "@fortawesome/free-solid-svg-icons": "6.3.0",
+    "@fortawesome/angular-fontawesome": "0.13.0",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@ngrx/effects": "16.2.0",
     "@ngrx/store": "16.2.0",
     "@ngrx/store-devtools": "16.2.0",
@@ -61,12 +61,12 @@
     "@types/node": "18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "@wdio/cli": "8.3.8",
-    "@wdio/jasmine-framework": "8.3.8",
-    "@wdio/local-runner": "8.3.8",
-    "@wdio/spec-reporter": "8.3.0",
+    "@wdio/cli": "8.16.22",
+    "@wdio/jasmine-framework": "8.16.22",
+    "@wdio/local-runner": "8.16.22",
+    "@wdio/spec-reporter": "8.16.22",
     "chromedriver": "117.0.0",
-    "eslint": "^8.39.0",
+    "eslint": "8.51.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-jasmine": "4.1.3",
     "galenframework-cli": "2.4.4-build43",
