--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@ngrx/effects": "16.2.0",
     "@ngrx/store": "16.2.0",
     "@ngrx/store-devtools": "16.2.0",
-    "bootstrap": "5.2.3",
+    "bootstrap": "5.3.2",
     "rxjs": "7.8.0",
     "tslib": "2.6.2",
     "zone.js": "0.13.3"
@@ -59,15 +59,15 @@
     "@playwright/test": "1.31.1",
     "@types/jasmine": "4.3.1",
     "@types/node": "20.8.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "6.7.5",
+    "@typescript-eslint/parser": "6.7.5",
     "@wdio/cli": "8.16.22",
     "@wdio/jasmine-framework": "8.16.22",
     "@wdio/local-runner": "8.16.22",
     "@wdio/spec-reporter": "8.16.22",
     "chromedriver": "117.0.0",
     "eslint": "8.51.0",
-    "eslint-config-prettier": "8.6.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-jasmine": "4.1.3",
     "galenframework-cli": "2.4.4-build43",
     "husky": "8.0.3",
@@ -78,14 +78,13 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.0.0",
     "playwright": "1.31.1",
-    "postcss": "8.4.21",
-    "prettier": "2.8.4",
+    "postcss": "8.4.31",
+    "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
-    "stylelint": "14.16.1",
-    "stylelint-config-prettier": "9.0.5",
-    "stylelint-config-sass-guidelines": "9.0.1",
-    "stylelint-config-standard-scss": "6.1.0",
-    "stylelint-no-unsupported-browser-features": "6.1.0",
+    "stylelint": "15.10.3",
+    "stylelint-config-sass-guidelines": "10.0.0",
+    "stylelint-config-standard-scss": "11.0.0",
+    "stylelint-no-unsupported-browser-features": "7.0.0",
     "ts-node": "10.9.1",
     "typescript": "5.1.6",
     "wdio-chromedriver-service": "8.1.1"
