--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,11 @@ jobs:
         run: |
           npm run test:ci
 
+      # Install Playwright
+      - name: Install PlayWright
+        run: |
+          npx install playwright
+
       # Run E2E Tests
       - name: PlayWright Test
         run: |
