--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,11 @@ jobs:
         run: |
           npm ci
 
+      # install playwright
+      - name: Install Playwright with Chrome
+        run: |
+          npx playwright install --with-deps
+
       # build
       - name: Build
         run: |
@@ -39,19 +44,14 @@ jobs:
         run: |
           npm run test:ci
 
-      # Start Angular App
-      - name: Run Angular App
-        run: |
-          npm start
-
       # Run E2E Tests
-      - name: WebdriverIO Test
-        run: |
-          npm run e2e:wdio
-
       - name: PlayWright Test
         run: |
           npm run e2e:playwright
+
+      - name: WebdriverIO Test
+        run: |
+          npm run e2e:wdio
 
       # deploy recent build and push it to branch 'gh-pages'
       # this will trigger the action 'pages build & deployment' to host the recent build
