--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build, Unit Test & Deploy
+name: Build, Test & Trigger Deploy
 
 on:
   push:
@@ -47,18 +47,17 @@ jobs:
       # Run E2E Tests
       - name: PlayWright Test
         run: |
-          npm run e2e:playwright
+          npm run e2e:playwright:ci
 
       - name: WebdriverIO Test
         run: |
-          npx wdio e2e-wdio/wdio.conf.ts
+          npm run e2e:wdio:ci
 
-      # deploy recent build and push it to branch 'gh-pages'
+      # Deploy recent build and push it to branch 'gh-pages'
       # this will trigger the action 'pages build & deployment' to host the recent build
-
-      #- name: Deploy to GitHub Pages
-      #  uses: peaceiris/actions-gh-pages@v3
-      #  with:
-      #    github_token: ${{ secrets.GITHUB_TOKEN }}
-      #    publish_dir: ./dist/angular-redux-shop
-      #    publish_branch: gh-pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist/angular-redux-shop
+          publish_branch: gh-pages
