--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ngrx/store-devtools": "17.0.1",
     "bootstrap": "5.3.2",
     "rxjs": "7.8.1",
+    "stylelint-config-scss": "1.0.0-security",
     "tslib": "2.6.2",
     "zone.js": "0.14.2"
   },
@@ -57,8 +58,8 @@
     "@angular/compiler-cli": "17.0.7",
     "@angular/language-service": "17.0.7",
     "@ngrx/schematics": "17.0.1",
-    "@playwright/test": "1.38.1",
-    "@types/jasmine": "5.1.1",
+    "@playwright/test": "1.40.1",
+    "@types/jasmine": "5.1.4",
     "@types/node": "20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
@@ -66,9 +67,9 @@
     "@wdio/jasmine-framework": "8.19.0",
     "@wdio/local-runner": "8.19.0",
     "@wdio/spec-reporter": "8.19.0",
-    "chromedriver": "119.0.1",
+    "chromedriver": "120.0.0",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "9.0.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jasmine": "4.1.3",
     "galenframework-cli": "2.4.4-build43",
     "husky": "8.0.3",
@@ -78,14 +79,14 @@
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "playwright": "1.38.1",
-    "postcss": "8.4.31",
+    "playwright": "1.40.1",
+    "postcss": "8.4.32",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
     "start-server-and-test": "2.0.3",
     "stylelint": "15.11.0",
     "stylelint-config-sass-guidelines": "10.0.0",
-    "stylelint-config-standard-scss": "11.0.0",
+    "stylelint-config-standard-scss": "11.1.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
