--- a/angular.json
+++ b/angular.json
@@ -109,7 +109,8 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@angular-eslint/schematics"]
+    "schematicCollections": ["@angular-eslint/schematics"],
+    "analytics": false
   },
   "schematics": {
     "@angular-eslint/schematics:application": {
