--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "e2e:wdio:ci": "start-server-and-test start http://localhost:4200 e2e:wdio",
     "galen": "galen",
     "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "npm update browserstack-node-sdk",
+    "e2e:playwright-browserstack": "(set TS_NODE_PROJECT=./e2e-playwright/tsconfig.json) && browserstack-node-sdk playwright test --config=./e2e-playwright/playwright.config.ts",
+    "e2e:playwright:ci-browserstack": "(set TS_NODE_PROJECT=./e2e-playwright/tsconfig.json) && browserstack-node-sdk playwright test --config=./e2e-playwright/playwright.config.ci.ts",
+    "e2e:playwright:ui-browserstack": "(set TS_NODE_PROJECT=./e2e-playwright/tsconfig.json) && browserstack-node-sdk playwright test --ui --config=./e2e-playwright/playwright.config.ts"
   },
   "dependencies": {
     "@angular/animations": "17.0.7",
@@ -67,6 +71,7 @@
     "@wdio/jasmine-framework": "8.26.3",
     "@wdio/local-runner": "8.26.3",
     "@wdio/spec-reporter": "8.26.3",
+    "browserstack-node-sdk": "1.31.14",
     "chromedriver": "120.0.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "9.1.0",
