--- a/.github/workflows/run-playwright-browserstack.yml
+++ b/.github/workflows/run-playwright-browserstack.yml
@@ -49,15 +49,10 @@ jobs:
         run: |
           npm run build:prod
 
-      # start webserver
-      - name: Start Application
-        run: |
-          npm run start
-
       # Run E2E Tests
       - name: PlayWright Test
         run: |
-          npm run e2e:playwright:ui-browserstack
+          npx concurrently --kill-others "npm run e2e:playwright:ui-browserstack" "npm run start" --success first
         env:
           BROWSERSTACK_USER_NAME: ${{ inputs.username }}
           BROWSERSTACK_ACCESS_KEY: ${{ inputs.key }}
