--- a/.github/workflows/run-playwright-browserstack.yml
+++ b/.github/workflows/run-playwright-browserstack.yml
@@ -52,7 +52,7 @@ jobs:
       # Run E2E Tests
       - name: PlayWright Test
         run: |
-          npx concurrently --kill-others "npm run e2e:playwright:ui-browserstack" "npm run start" --success first
+          npx concurrently --kill-others "npm run e2e:playwright:ci-browserstack" "npm run start" --success first
         env:
           BROWSERSTACK_USER_NAME: ${{ inputs.username }}
           BROWSERSTACK_ACCESS_KEY: ${{ inputs.key }}
