--- a/.github/workflows/run-playwright-browserstack.yml
+++ b/.github/workflows/run-playwright-browserstack.yml
@@ -2,7 +2,7 @@ name: Run Playwright on Browserstack
 
 on:
   workflow_dispatch:
-    secrets:
+    inputs:
       user_name:
         description: 'browserstack user name'
         required: true
@@ -21,6 +21,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Mask Credentials
+        run: |
+          USER_NAME=$(jq -r '.inputs.user_name' $GITHUB_EVENT_PATH)
+          ACCESS_KEY=$(jq -r '.inputs.access_key' $GITHUB_EVENT_PATH)
+          echo ::add-mask::$USER_NAME
+          echo ::add-mask::$ACCESS_KEY
+          echo USER_NAME=$USER_NAME >> $GITHUB_ENV
+          echo ACCESS_KEY=$ACCESS_KEY >> $GITHUB_ENV
 
       # setting up node
       - name: Setup Node.js
@@ -50,5 +59,5 @@ jobs:
         run: |
           npm run e2e:playwright:ci-browserstack
         env:
-          BROWSERSTACK_USER_NAME: ${{ secrets.user_name }}
-          BROWSERSTACK_ACCESS_KEY: ${{ secrets.access_key }}
+          BROWSERSTACK_USER_NAME: ${{ env.USER_NAME }}
+          BROWSERSTACK_ACCESS_KEY: ${{ env.ACCESS_KEY }}
