--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@wdio/local-runner": "8.26.3",
     "@wdio/spec-reporter": "8.26.3",
     "browserstack-node-sdk": "1.31.14",
-    "chromedriver": "120.0.0",
+    "chromedriver": "^121.0.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jasmine": "4.1.3",
